[tool.poetry]
name = "urlex"
version = "0.1.0"
description = "Expand URLs using urlex.org"
authors = ["Nick Ali <n@nali.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-urlex = "urlex.main:main"
